Bug 1945700 - Add a boolean background property to dismiss buttons that enables contrasting colours r=omc-reviewers,aminomancer
Differential Revision: https://phabricator.services.mozilla.com/D237640

UltraBlame original commit: 543cdfa3c9f269739215cdaf80a3f08c88c1fb80

--- a/browser/components/aboutwelcome/content-src/aboutwelcome.scss
+++ b/browser/components/aboutwelcome/content-src/aboutwelcome.scss
@@ -10294,6 +10294,74 @@ right
 auto
 ;
 }
+&
+.
+with
+-
+background
+{
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+background
+)
+;
+&
+:
+hover
+{
+background
+-
+color
+:
+var
+(
+-
+-
+button
+-
+background
+-
+color
+-
+hover
+)
+;
+}
+&
+:
+active
+{
+background
+-
+color
+:
+var
+(
+-
+-
+button
+-
+background
+-
+color
+-
+active
+)
+;
+}
+}
 }
 keyframes
 fadein
