--- a/browser/components/asrouter/content-src/styles/_feature-callout.scss
+++ b/browser/components/asrouter/content-src/styles/_feature-callout.scss
@@ -204,6 +204,80 @@ dark
 theme
 ;
 }
+at
+-
+root
+:
+root
+[
+lwt
+-
+popup
+=
+'
+light
+'
+]
+#
+{
+&
+}
+:
+not
+(
+.
+simulateContent
+)
+{
+color
+-
+scheme
+:
+light
+;
+include
+light
+-
+theme
+;
+}
+at
+-
+root
+:
+root
+[
+lwt
+-
+popup
+=
+'
+dark
+'
+]
+#
+{
+&
+}
+:
+not
+(
+.
+simulateContent
+)
+{
+color
+-
+scheme
+:
+dark
+;
+include
+dark
+-
+theme
+;
+}
 media
 (
 prefers
@@ -2493,6 +2567,144 @@ width
 :
 24px
 ;
+}
+&
+.
+with
+-
+background
+{
+background
+:
+url
+(
+'
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+close
+.
+svg
+'
+)
+no
+-
+repeat
+center
+/
+16px
+var
+(
+-
+-
+fc
+-
+dismiss
+-
+button
+-
+bg
+)
+;
+&
+:
+hover
+{
+background
+:
+url
+(
+'
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+close
+.
+svg
+'
+)
+no
+-
+repeat
+center
+/
+16px
+var
+(
+-
+-
+fc
+-
+dismiss
+-
+button
+-
+bg
+-
+hover
+)
+;
+&
+:
+active
+{
+background
+:
+url
+(
+'
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+close
+.
+svg
+'
+)
+no
+-
+repeat
+center
+/
+16px
+var
+(
+-
+-
+fc
+-
+dismiss
+-
+button
+-
+bg
+-
+active
+)
+;
+}
+}
 }
 }
 }
